<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".SamplesOverviewActivity" >
        
        <TextView
            android:id="@+id/userLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userLabel"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <Spinner
            android:id="@+id/userDropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userLabel"
            android:layout_centerHorizontal="true" />
        
		<TextView
            android:id="@+id/bioCharacteristicLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phraseType"
            android:text="@string/bioCharacteristicLabel"
            android:textAppearance="?android:attr/textAppearanceLarge" />

		<Spinner
            android:id="@+id/characteristicDropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bioCharacteristicLabel"
            android:layout_centerHorizontal="true"
            android:entries="@array/characteristics" />

		<RadioGroup
            android:id="@+id/graphComputationType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/characteristicDropdown"
            android:orientation="vertical" >

		<RadioButton
                android:id="@+id/userIndividualRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/userIndividualLabel" />

            <RadioButton
                android:id="@+id/averagesRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/averagesLabel" />
            
            <RadioButton
                android:id="@+id/deviationsRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deviationLabel" />
        </RadioGroup>
		
		<CheckBox
		    android:id="@+id/grubbsCleanUpCheckBox"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignLeft="@+id/characteristicDropdown"
		    android:layout_below="@+id/graphComputationType"
		    android:text="@string/grubbsCleanUpLabel" />
		
		<Button
		    android:id="@+id/viewSamplesButton"
		    android:layout_width="100dp"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/grubbsCleanUpCheckBox"
		    android:layout_centerHorizontal="true"
		    android:onClick="onClick"
		    android:text="@string/showButtonLabel" />

		<CheckBox
		    android:id="@+id/experimentalCheckBox"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignLeft="@+id/phraseType"
		    android:layout_below="@+id/userDropdown"
		    android:checked="true"
		    android:text="@string/experimentalSamplesLabel" />

		<RadioGroup
		    android:id="@+id/phraseType"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignLeft="@+id/bioCharacteristicLabel"
		    android:layout_below="@+id/experimentalCheckBox"
		    android:orientation="horizontal" >

		    <RadioButton
		        android:id="@+id/simplePassRadio"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:checked="true"
		        android:text="@string/simplePhrase" />

		    <RadioButton
		        android:id="@+id/complexPassRadio"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/complexPhrase" />
		</RadioGroup>
		
    </RelativeLayout>

</ScrollView>