<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false" >

	<RelativeLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".MainActivity" >
	
	    <TextView
	        android:id="@+id/templateInfoText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"
	        android:text="@string/app_name"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <ImageView
	        android:id="@+id/imageView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/templateInfoText"
	        android:layout_centerHorizontal="true"
	        android:contentDescription="@string/mainImageDes"
	        android:scaleType="matrix"
	        android:src="@drawable/icon" />

	    <Button
	        android:id="@+id/userLoginButton"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/createTemplateButton"
	        android:layout_below="@+id/imageView1"
	        android:onClick="onClick"
	        android:text="@string/loginUserButton" />

	    <Button
	        android:id="@+id/createTemplateButton"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/createTemplateButton"
	        android:layout_below="@+id/userLoginButton"
	        android:onClick="onClick"
	        android:text="@string/createTemplateButtonLabel" />

	    <Button
	        android:id="@+id/feedbackButton"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/createTemplateButton"
	        android:layout_below="@+id/createTemplateButton"
	        android:onClick="onClick"
	        android:text="@string/feedbackButtonLabel" />

	    <Button
	        android:id="@+id/sendEmailButton"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/feedbackButton"
	        android:layout_below="@+id/feedbackButton"
	        android:onClick="onClick"
	        android:text="@string/sendMailButtonLabel" />

	    <Button
	        android:id="@+id/analyzeButton"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/sendEmailButton"
	        android:layout_below="@+id/sendEmailButton"
	        android:onClick="onClick"
	        android:text="@string/analyzeButtonLabel" />
	
	</RelativeLayout>
</ScrollView>