<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="529dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".AnalyzeActivity" >

        <Spinner
            android:id="@+id/algorithmDropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/algorithmLabel"
            android:layout_centerHorizontal="true"
            android:entries="@array/algorithm" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/algorithmDropdown"
            android:layout_below="@+id/algorithmDropdown"
            android:layout_marginTop="30dp" >

            <TextView
                android:id="@+id/graphsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/graphsLabelText"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/nGraphsEditText"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/linearLayout2"
            android:layout_below="@+id/linearLayout2"
            android:layout_marginTop="5dp" >

            <TextView
                android:id="@+id/sensitivityLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sensitivityLabel"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/sensitivityEditText"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/percent"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <TextView
            android:id="@+id/algorithmLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/algorithmDropdown"
            android:layout_alignParentTop="true"
            android:layout_marginTop="17dp"
            android:text="@string/algorithmLabel"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/linearLayout1"
            android:layout_below="@+id/linearLayout1"
            android:layout_marginTop="5dp" >

            <TextView
                android:id="@+id/pThresholdLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pThreholdLabel"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/pThresholdEditText"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/percent"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/acceleratorCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/flyingTimesCheckBox"
            android:layout_below="@+id/flyingTimesCheckBox"
            android:text="@string/acceleratorCheckLabel" />

        <CheckBox
            android:id="@+id/orientationCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/acceleratorCheckBox"
            android:layout_below="@+id/acceleratorCheckBox"
            android:text="@string/orientationCheckLabel" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/flyingTimesCheckBox"
            android:layout_below="@+id/LinearLayout01"
            android:layout_marginTop="30dp"
            android:text="@string/evaluationLabel"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <CheckBox
            android:id="@+id/flyingTimesCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/LinearLayout01"
            android:layout_below="@+id/textView1"
            android:checked="true"
            android:text="@string/flyingTimesCheckLabel" />

        <CheckBox
            android:id="@+id/errorRateCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/substitutionCheckBox"
            android:layout_below="@+id/flyingTimesCheckBox"
            android:text="@string/errorRateCheckLabel" />

        <CheckBox
            android:id="@+id/substitutionCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/errorRateCheckBox"
            android:layout_alignRight="@+id/algorithmDropdown"
            android:checked="true"
            android:text="@string/substitutionCheckLabel" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/orientationCheckBox"
            android:layout_centerHorizontal="true" >

            <TextView
                android:id="@+id/resultsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <ProgressBar
                android:id="@+id/loadingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" >

            <Button
                android:id="@+id/viewSamplesButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/viewSamplesButtonLabel" />

            <Button
                android:id="@+id/testButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/testButtonLabel" />
        </LinearLayout>

    </RelativeLayout>

</ScrollView>