<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UserLoginActivity" >

    <EditText
        android:id="@+id/usernameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/usernameTextHint"
        android:inputType="text" >
        
    </EditText>

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameText"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/passwordTextHint"
        android:inputType="textPassword"> 
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/aboutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordText"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        android:text="@string/submitButtonText" />

    <TextView
        android:id="@+id/templateInfoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutButton"
        android:layout_centerHorizontal="true"
        android:text="@string/implicit"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="invisible" />

</RelativeLayout>
