<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false" >

	<RelativeLayout
	    android:layout_width="296dp"
	    android:layout_height="387dp"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".DeviceInfoActivity" >
	
	    <TextView
	        android:id="@+id/versionInfoText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/templateInfoText"
	        android:layout_below="@+id/templateInfoText"
	        android:layout_marginLeft="26dp"
	        android:text="@string/implicit"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:id="@+id/textView6"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/templateInfoText"
	        android:layout_below="@+id/versionInfoText"
	        android:text="@string/cpuTextLabel"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	    <TextView
	        android:id="@+id/cpuInfoText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/displaySizeText"
	        android:layout_below="@+id/textView6"
	        android:text="@string/implicit"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	   
	    <TextView
	        android:id="@+id/textView5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/textView6"
	        android:layout_below="@+id/cpuInfoText"
	        android:text="@string/displaySizeLabel"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	    <TextView
	        android:id="@+id/displaySizeText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/memoryUsageText"
	        android:layout_below="@+id/textView5"
	        android:text="@string/implicit"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	   
	    <TextView
	        android:id="@+id/textView7"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/textView5"
	        android:layout_below="@+id/displaySizeText"
	        android:text="@string/batteryLevelLabel"
	        android:textAppearance="?android:attr/textAppearanceMedium" />	    

	    <TextView
	        android:id="@+id/batteryLevelText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/cpuInfoText"
	        android:layout_below="@+id/textView7"
	        android:text="@string/implicit"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <TextView
	        android:id="@+id/nameLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/textView7"
	        android:layout_below="@+id/batteryLevelText"
	        android:text="@string/internalSpaceLabel"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    	    
	    <TextView
	        android:id="@+id/internalSpaceText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/externalSpaceText"
	        android:layout_below="@+id/nameLabel"
	        android:text="@string/implicit"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	    <TextView
	        android:id="@+id/appNameLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/nameLabel"
	        android:layout_below="@+id/internalSpaceText"
	        android:text="@string/externalSpaceLabel"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	    <TextView
	        android:id="@+id/externalSpaceText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/versionInfoText"
	        android:layout_below="@+id/appNameLabel"
	        android:text="@string/implicit"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:id="@+id/versionLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/appNameLabel"
	        android:layout_below="@+id/externalSpaceText"
	        android:text="@string/memoryUsageLabel"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:id="@+id/memoryUsageText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/externalSpaceText"
	        android:layout_below="@+id/versionLabel"
	        android:text="@string/implicit"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <TextView
	        android:id="@+id/algorithmLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:text="@string/phoneModelLabel"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <TextView
	        android:id="@+id/templateInfoText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/algorithmLabel"
	        android:layout_below="@+id/modelInfoText"
	        android:text="@string/androidVersionLabel"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <TextView
	        android:id="@+id/modelInfoText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/versionInfoText"
	        android:layout_below="@+id/algorithmLabel"
	        android:text="@string/implicit"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	</RelativeLayout>
</ScrollView>